[package]
name = "brb_node_qp2p"
version = "0.1.0"
authors = ["David Rusu <davidrusu.me@gmail.com>"]
edition = "2018"
license = "MIT OR BSD-3-Clause"

[[bin]]
name = "brb_node"
path = "src/brb_node.rs"

[dependencies]
rand = "0.7.3"
serde = "1.0.106"
bincode = "1.2.1"
brb = { git = "https://github.com/maidsafe/brb", branch = "master" }
brb_dt_orswot = { git = "https://github.com/maidsafe/brb_dt_orswot", branch = "master" }
cmdr = "0.3.12"
tokio = { version = "~0.2.22", features = ["full"] }
qp2p = "0.9.9"
log = "0.4.13"
env_logger = "0.8.2"

# [profile.test]
# opt-level = 3
# lto = "fat"
# incremental = false
