[package]
name = "brb_node_qp2p"
version = "0.1.0"
description = "a simple P2P node (CLI) for interactively using BRB"
authors = [ "David Rusu <davidrusu.me@gmail.com>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://g0.8.2.com/maidsafe/brb_node_qp2p"
edition = "2018"
publish = false


[[bin]]
name = "brb_node"
path = "src/brb_node.rs"

[dependencies]
rand = "0.8.2"
serde = "1.0.120"
bincode = "1.3.1"
brb = "1.0.1"
brb_dt_orswot = "1.0.1"
cmdr = "0.3.12"
tokio = { version = "~0.2.22", features = ["full"] }
qp2p = "0.9.9"
log = "0.4.13"
env_logger = "0.8.2"

# [profile.test]
# opt-level = 3
# lto = "fat"
# incremental = false
