[package]
name = "brb_node_qp2p"
version = "1.0.4"
description = "a simple P2P node (CLI) for interactively using BRB"
authors = [ "David Rusu <davidrusu.me@gmail.com>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://g0.8.2.com/maidsafe/brb_node_qp2p"
edition = "2018"
publish = false

[[bin]]
name = "brb_node"
path = "src/brb_node.rs"

[dependencies]
rand = "0.8.3"
serde = "1.0.123"
bincode = "1.3.1"
brb = "1.0.2"
brb_dt_orswot = "1.0.3"
cmdr = "0.3.12"
qp2p = {git="https://github.com/lionel1704/qp2p.git", branch="refactor-api"}
log = "0.4.13"
env_logger = "0.8.2"
bytes = "1.0.1"

  [dependencies.tokio]
  version = "~0.2.22"
  features = [ "full" ]
